# hyperion

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  package.xml
apps/pose3_absolute/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  benchmark_results.xml
benchmarks/src/hyperion_benchmarks/: benchmarks_main.cpp
benchmarks/src/hyperion_benchmarks/splines/: basalt_spline_benchmarks.cpp  hyperion_spline_benchmarks.cpp
codegen/: generate.py
codegen/cost_functions/: cost_function.py  generator.py  patches.py
codegen/cost_functions/templates/: COST_FUNCTION.cpp.jinja  COST_FUNCTION.hpp.jinja  FACTOR.cpp.jinja  FACTOR.hpp.jinja  UTILS.jinja
codegen/factors/: between.py  delta.py  distance.py  spline3.py  spline4.py  spline5.py  standard.py
codegen/groups/: ceres_group_ops.py  generator.py  hyperion_group_ops.py
codegen/splines/: b_spline.py  evaluator.py  generator.py  partial.py  spline3.py  spline4.py  spline5.py  utils.py  z_spline.py
codegen/templates/: AGGREGATE_HEADER.hpp.jinja
include/hyperion/: forward.hpp  hyperion.hpp
include/hyperion/ceres/: ceres.hpp  forward.hpp
include/hyperion/ceres/cost_functions/: cost_functions.hpp  pose2_between_cost_function.cpp  pose2_between_cost_function.hpp  pose2_delta_cost_function.cpp  pose2_delta_cost_function.hpp  pose2_prior_cost_function.cpp  pose2_prior_cost_function.hpp  pose2_r2_sensor_between_cost_function.cpp  pose2_r2_sensor_between_cost_function.hpp  pose2_r2_sensor_prior_cost_function.cpp  pose2_r2_sensor_prior_cost_function.hpp  pose2_r2_sensor_relative_between_cost_function.cpp  pose2_r2_sensor_relative_between_cost_function.hpp  pose2_rot2_sensor_between_cost_function.cpp  pose2_rot2_sensor_between_cost_function.hpp  pose2_rot2_sensor_prior_cost_function.cpp  pose2_rot2_sensor_prior_cost_function.hpp  pose2_rot2_sensor_relative_between_cost_function.cpp  pose2_rot2_sensor_relative_between_cost_function.hpp  pose2_sensor_angle_between_cost_function.cpp  pose2_sensor_angle_between_cost_function.hpp  pose2_sensor_between_cost_function.cpp  pose2_sensor_between_cost_function.hpp  pose2_sensor_euclidean_distance_cost_function.cpp  pose2_sensor_euclidean_distance_cost_function.hpp  pose2_sensor_prior_cost_function.cpp  pose2_sensor_prior_cost_function.hpp  pose2_sensor_relative_angle_between_cost_function.cpp  (+247 more)
include/hyperion/cost_functions/: cost_function.cpp  cost_function.hpp  cost_functions.hpp  pose2_between_cost_function.cpp  pose2_between_cost_function.hpp  pose2_delta_cost_function.cpp  pose2_delta_cost_function.hpp  pose2_prior_cost_function.cpp  pose2_prior_cost_function.hpp  pose2_r2_sensor_between_cost_function.cpp  pose2_r2_sensor_between_cost_function.hpp  pose2_r2_sensor_prior_cost_function.cpp  pose2_r2_sensor_prior_cost_function.hpp  pose2_r2_sensor_relative_between_cost_function.cpp  pose2_r2_sensor_relative_between_cost_function.hpp  pose2_rot2_sensor_between_cost_function.cpp  pose2_rot2_sensor_between_cost_function.hpp  pose2_rot2_sensor_prior_cost_function.cpp  pose2_rot2_sensor_prior_cost_function.hpp  pose2_rot2_sensor_relative_between_cost_function.cpp  pose2_rot2_sensor_relative_between_cost_function.hpp  pose2_sensor_angle_between_cost_function.cpp  pose2_sensor_angle_between_cost_function.hpp  pose2_sensor_between_cost_function.cpp  pose2_sensor_between_cost_function.hpp  pose2_sensor_euclidean_distance_cost_function.cpp  pose2_sensor_euclidean_distance_cost_function.hpp  pose2_sensor_prior_cost_function.cpp  pose2_sensor_prior_cost_function.hpp  pose2_sensor_relative_angle_between_cost_function.cpp  pose2_sensor_relative_angle_between_cost_function.hpp  pose2_sensor_relative_between_cost_function.cpp  pose2_sensor_relative_between_cost_function.hpp  pose2_sensor_relative_euclidean_distance_cost_function.cpp  pose2_sensor_relative_euclidean_distance_cost_function.hpp  pose3_between_cost_function.cpp  pose3_between_cost_function.hpp  pose3_camera_linear_bearing_cost_function.cpp  pose3_camera_linear_bearing_cost_function.hpp  pose3_camera_linear_reprojection_cost_function.cpp  (+238 more)
include/hyperion/factors/: factor.cpp  factor.hpp  factors.hpp  forward.hpp
include/hyperion/graph/: forward.hpp  graph.cpp  graph.hpp  vertex.cpp  vertex.hpp
include/hyperion/groups/: forward.hpp  group_ops.cpp  group_ops.hpp  groups.hpp
include/hyperion/loss_functions/: forward.hpp  loss_function.cpp  loss_function.hpp  loss_functions.hpp
include/hyperion/messages/: forward.hpp  linearization_message.hpp  message.hpp  messages.hpp  sized_linearization_message.hpp  sized_message.hpp
include/hyperion/nodes/: forward.hpp  node.cpp  node.hpp  nodes.hpp  sized_node.cpp  sized_node.hpp  sized_node_impl.hpp
include/hyperion/publishers/: map_publisher.hpp  publishers.hpp  spline_control_covariance_publisher.hpp  spline_control_point_publisher.hpp  spline_knot_publisher.hpp  spline_path_publisher.hpp  spline_pose_publisher.hpp  spline_publisher.hpp  spline_velocity_publisher.hpp  spline_with_covariance_publisher.hpp  transform_publisher.hpp
include/hyperion/solver/: forward.hpp  iteration_callback.cpp  iteration_callback.hpp  solver.cpp  solver.hpp  solver_options.cpp  solver_options.hpp  solver_summary.cpp  solver_summary.hpp  types.hpp
include/hyperion/splines/: comparator.hpp  evaluator.cpp  evaluator.hpp  forward.hpp  interpolator.cpp  interpolator.hpp  spline.cpp  spline.hpp  spline_with_covariance.cpp  spline_with_covariance.hpp  splines.hpp  types.hpp
include/hyperion/utils/: clock.cpp  clock.hpp  enum.hpp  forward.hpp  inversion.hpp  memory.hpp  random.hpp  range.hpp  utils.hpp  yaml.cpp  yaml.hpp
tests/: CMakeLists.txt
tests/include/hyperion_tests/: constants.hpp
tests/src/hyperion_tests/: tests_main.cpp
tests/src/hyperion_tests/splines/: spline_evaluator_tests.cpp
(+746 files in other folders)
