<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>hyperion</name>
    <version>1.0.0</version>
    <description>
        Symbolic Continuous-Time Gaussian Belief Propagation Framework with Ceres Interoperability
    </description>
    <maintainer email="dhug@ethz.ch">David Hug</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>libabsl-dev</build_depend>
    <build_depend>libceres-dev</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>libgoogle-glog-dev</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>visualization_msgs</build_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_catch2</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
